--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/dotenv": "^6.1.1",
     "dotenv": "^7.0.0",
     "express": "^4.17.1",
+    "handlebars": "^4.0.14",
     "immutable": "^4.0.0-rc.12",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
